--- a/_posts/2020-02-07-iola.markdown
+++ b/_posts/2020-02-07-iola.markdown
@@ -4,13 +4,15 @@ title:  "iola.app"
 date:   2020-02-07 11:21:51 +0100
 categories: project
 ---
+![iola project picture](/assets/iola.jpg)
+
 ## Project and context
 
 iola.app was created as an alternative to a long and expensive mobile development. It is a plugin for websites, built on the Oxwall platform. The idea was simple: installing one mobile application iola, users could communicate with the website's owner or with their friends from other websites, which have the iola plugin connected.
 
 ## Team and process
 
-As a lead UX writer I worked remotely with the international team. All the collaboration went with Google Docs (text drafts, editorial policy, etc.), Trello, Invision.
+As a lead UX writer I worked remotely with the international team of designer and two developers. All the collaboration went with Google Docs (text drafts, editorial policy, etc.), Trello, Invision.
 
 If you want to *read* the story, please check out the long version: [«UX writing for digital products: iola app»](https://teletype.in/@jstwrtng/-t9tjh3UR). Or browse some examples of copy and microcopy here: only screenshots, no text.
 
@@ -20,11 +22,11 @@ If you want to *read* the story, please check out the long version: [«UX writin
 
 ![see the list of upcoming features](/assets/iola/oxwall-store-features.png)
 
-![cron set up message](/assets/iola/oxwall-set-iola-plugin-example-publish.png)
+![cron set up message](/assets/iola/setup-cron.png)
 
-![iola set widget message](/assets/iola/oxwall-set-iola-plugin-to-publish.png)
+![iola set widget message](/assets/iola/set-iola-widget.png)
 
-![iola plugin call-to-action](/assets/iola/iola-wiget-updated.png)
+![iola plugin call-to-action](/assets/iola/iola-wiget-updated-small.png)
 
 ### Stores description, marketing deliverables
 
@@ -39,6 +41,8 @@ If you want to *read* the story, please check out the long version: [«UX writin
 ![iola oxwall description](/assets/iola/oxwall-store.png)
 
 ![iola appstore description](/assets/iola/iola-app-store.png)
+
+![iola appstore description](/assets/iola/iola-release-letter-small.png)
 
 Read more with details, task explanations and side: [«UX writing for digital products: iola app»](https://teletype.in/@jstwrtng/-t9tjh3UR).
 
