--- a/_posts/2019-07-01-atlas.markdown
+++ b/_posts/2019-07-01-atlas.markdown
@@ -4,12 +4,15 @@ title:  "Atlas Biomed"
 date:   2019-07-01 09:11:51 +0100
 categories: project
 ---
+Interviewed neuroendocrinologist, cardiologist, gastroenterologists, geneticists; analyzed scientific papers and studies; translated from Russian to English and vice versa. Together with a team created a project that was presented on Yandex Conference.
+
 ![atlas project picture](/assets/atlas-biomed.png)
+
+## Project, context, team
 
 Atlas Biomed is a personalised health company. Atlas combines DNA and microbiome technologies with digital health data to inspire people into positive lifestyle change and lead them to a healthier future. The company pays special attention to the education of its audience.
 
-As a medical journalist I wrote articles on health and medicine and copy for marketing products. That included analyzing the up-to-date information, medical researches, taking interviews with clinicians of various specialties.
- Here are some the examples.
+As a medical journalist I interviewd clinicians and medical specialists, wrote articles on health and medicine and copy for marketing products. Tools: Google Docs, Trello.
 
 ![Atlas article on Cardio Exercise Can Increase Gut Microbiome Diversity](/assets/atlas/activity-and-microbiome.png)
 
