--- a/_posts/2020-02-07-iola.markdown
+++ b/_posts/2020-02-07-iola.markdown
@@ -4,17 +4,17 @@ title:  "iola.app"
 date:   2020-02-07 11:21:51 +0100
 categories: project
 ---
+Working for a startup as a lead UX writer, I created content architecture and wrote lots of deliverables, analyzed startup's business rivals and all I could get about users.
+
 ![iola project picture](/assets/iola.jpg)
 
-## Project and context
+## Project, context, team
 
 iola.app was created as an alternative to a long and expensive mobile development. It is a plugin for websites, built on the Oxwall platform. The idea was simple: installing one mobile application iola, users could communicate with the website's owner or with their friends from other websites, which have the iola plugin connected.
 
-## Team and process
+I worked remotely with the international team of designer and two developers. Tools: Google Docs, Trello, Invision.
 
-As a lead UX writer I worked remotely with the international team of designer and two developers. All the collaboration went with Google Docs (text drafts, editorial policy, etc.), Trello, Invision.
-
-If you want to *read* the story, please check out the long version: [«UX writing for digital products: iola app»](https://teletype.in/@jstwrtng/-t9tjh3UR). Or browse some examples of copy and microcopy here: only screenshots, no text.
+If you want to *read* the story, please check out the long version: [«UX writing for digital products: iola app»](https://teletype.in/@wrtng/-t9tjh3UR). Or browse some examples of copy and microcopy down here: only screenshots, no text.
 
 ### System information
 
@@ -43,8 +43,6 @@ If you want to *read* the story, please check out the long version: [«UX writin
 ![iola appstore description](/assets/iola/iola-app-store.png)
 
 ![iola appstore description](/assets/iola/iola-release-letter-small.png)
-
-Read more with details, task explanations and side: [«UX writing for digital products: iola app»](https://teletype.in/@jstwrtng/-t9tjh3UR).
 
 <!-- You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
