new site on hugo

--- a/content/posts/2020-02-07-iola.markdown
+++ b/content/posts/2020-02-07-iola.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "iola.app"
 date:   2020-02-07 11:21:51 +0100
 categories: project
+draft: false
 ---
 Working for a startup as a lead UX writer, I created content architecture and wrote lots of deliverables, analyzed startup's business rivals and all I could get about users.
 
