--- a/_posts/2019-08-01-pythagor.markdown
+++ b/_posts/2019-08-01-pythagor.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "pythagor"
 date:   2019-08-01 08:21:51 +0100
-categories: project
+# categories: project
 ---
 As a writer and UX writer of a product on the pre-alpha stage of development, I came up with ideas for the name and tone of voice, talked to dozens of possible users and wrote many different deliverables. 
 
