--- a/_posts/2020-02-07-iola.markdown
+++ b/_posts/2020-02-07-iola.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "iola.app"
+title:  "Content starter kit for a startup"
 date:   2020-02-07 11:21:51 +0100
 # categories: project
 ---
