--- a/_posts/2019-07-01-atlas.markdown
+++ b/_posts/2019-07-01-atlas.markdown
@@ -1,5 +1,5 @@
 ---
-layout: post
+# layout: post
 title:  "Articles on health, edutainment things, UX copy for the international personalized health company "
 date:   2019-07-01 09:11:51 +0100
 # categories: project
